RESOLVED FIXED146815
SafariViewController loads partial webpage or entirely blank webpage
https://bugs.webkit.org/show_bug.cgi?id=146815
Summary SafariViewController loads partial webpage or entirely blank webpage
Anders Carlsson
Reported 2015-07-09 15:31:00 PDT
SafariViewController loads partial webpage or entirely blank webpage
Attachments
Patch (12.22 KB, patch)
2015-07-09 15:35 PDT, Anders Carlsson
no flags
Anders Carlsson
Comment 1 2015-07-09 15:35:27 PDT
WebKit Commit Bot
Comment 2 2015-07-09 15:37:30 PDT
Attachment 256531 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:113: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:117: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:145: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:149: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-07-09 16:27:12 PDT
Comment on attachment 256531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=256531&action=review r=mitz. > Source/WebKit2/UIProcess/ApplicationStateTracker.mm:136 > + break; ASSERT, instead
Anders Carlsson
Comment 4 2015-07-09 16:33:20 PDT
Chris Dumez
Comment 5 2016-07-27 08:56:23 PDT
Comment on attachment 256531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=256531&action=review > Source/WebKit2/UIProcess/ApplicationStateTracker.mm:141 > + auto applicationStateMonitor = adoptNS([[BKSApplicationStateMonitor alloc] init]); Should this be m_applicationStateMonitor instead of "auto applicationStateMonitor" ? applicationStateMonitor seems unused, however you are using m_applicationStateMonitor below.
Chris Dumez
Comment 6 2016-07-27 09:03:21 PDT
(In reply to comment #5) > Comment on attachment 256531 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=256531&action=review > > > Source/WebKit2/UIProcess/ApplicationStateTracker.mm:141 > > + auto applicationStateMonitor = adoptNS([[BKSApplicationStateMonitor alloc] init]); > > Should this be m_applicationStateMonitor instead of "auto > applicationStateMonitor" ? applicationStateMonitor seems unused, however you > are using m_applicationStateMonitor below. Filed https://bugs.webkit.org/show_bug.cgi?id=160255.
Note You need to log in before you can comment on or make changes to this bug.