Source/WebKit2/UIProcess/ApplicationStateTracker.h
@@ -33,13 +33,13 @@
 #import <wtf/WeakPtr.h>
 
 OBJC_CLASS BKSApplicationStateMonitor;
-OBJC_CLASS UIView;
+OBJC_CLASS WKContentView;
 
 namespace WebKit {
 
 class ApplicationStateTracker {
 public:
-    ApplicationStateTracker(UIView *, SEL didEnterBackgroundSelector, SEL willEnterForegroundSelector);
+    ApplicationStateTracker(WKContentView *, SEL didEnterBackgroundSelector, SEL willEnterForegroundSelector);
     ~ApplicationStateTracker();
 
     bool isInBackground() const { return m_isInBackground; }
@@ -48,7 +48,7 @@ private:
     void applicationDidEnterBackground();
     void applicationWillEnterForeground();
 
-    WeakObjCPtr<UIView> m_view;
+    WeakObjCPtr<WKContentView> m_view;
     SEL m_didEnterBackgroundSelector;
     SEL m_willEnterForegroundSelector;
 
